test/e2e/.snapshots/TestSetupFailureFlow/Invalid_Public_Key/GET__api_private_ipinfo_2.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 31 Mar 2025 12:45:34 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="3UZkSOU/BSsJiDGaC7jp1VHAkt5QqkCa", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}